--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="{{ url_for('table_bp.show') }}">排課</a>
+                <a class="nav-link" href="{{ url_for('table_bp.table') }}">排課</a>
                 {% if session.get('username') %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
