--- a/templates/test.html
+++ b/templates/test.html
@@ -11,7 +11,7 @@
     Courses:
     <ul>
         {% for course in user.courses %}
-        <li>{{ course.name }}</li>
+        <li>{{ course.course_name }}</li>
         {% endfor %}
     </ul>
 
