edit, add, view evaluation done, blank space and new line problem

--- a/templates/view_evaluation.html
+++ b/templates/view_evaluation.html
@@ -74,7 +74,7 @@
                                 <span style="color:#559ACC">&nbsp&nbsp&nbsp甜度 : {{ evaluation.sweetness }}&nbsp&nbsp涼度 : {{ evaluation.cool }}&nbsp&nbsp收穫 : {{ evaluation.gain }}</span>
                             </div>
                             <div class="container-fluid" style="padding-top:5px;">
-                                <p>{% autoescape false %}{{ evaluation.description }}{% endautoescape %}</p>
+                                <span>{% autoescape false %}{{ evaluation.description }}{% endautoescape %}</span>
                             </div>
                         </div>
                   </li>
