--- a/templates/view_evaluation.html
+++ b/templates/view_evaluation.html
@@ -71,10 +71,10 @@
                         <div class="container-fluid" style="background:#E0F4FF; border-radius:10px; padding:15px;">
                             <div class="container-fluid">
                                 <button type="button" class="btn btn-light btn-sm" disabled>{{ evaluation.username }}</button>
-                                <span style="color:#559ACC">&nbsp&nbsp&nbsp甜度 : {{ evaluation.sweetness }}&nbsp&nbsp涼度 : {{ evaluation.cool }}&nbsp&nbsp收穫 : {{ evaluation.gain }}</span>
+                                <span style="color:#559ACC">&nbsp&nbsp&nbsp甜度 : {{ evaluation.sweetness }}&nbsp;&nbsp;涼度 : {{ evaluation.cool }}&nbsp;&nbsp;收穫 : {{ evaluation.gain }}</span>
                             </div>
                             <div class="container-fluid" style="padding-top:5px;">
-                                <span>{% autoescape false %}{{ evaluation.description }}{% endautoescape %}</span>
+                                <p>{% autoescape false %}{{ evaluation.description }}{% endautoescape %}</p>
                             </div>
                         </div>
                   </li>
