space and newline problem, delete evaluatioin

--- a/templates/edit_evaluation.html
+++ b/templates/edit_evaluation.html
@@ -2,6 +2,7 @@
 {% block title %}編輯課程評價{% endblock title%}
 {% block content %}
   <div class="container-fluid" style="padding-top:20px; padding-bottom:20px; padding-left:100px; padding-right:100px;">
+      <dev style="float:right"><a href="/course/delete/{{ cid }}" class="btn btn-danger" role="button">刪除評價</a></dev>
       <h2 align="center"> 編輯課程評價 </h2>
       <hr style="height:3px;border-width:0;background-color:#46A3FF">
         <div class="container-fluid" style="border-radius:10px; padding-top:20px; padding-bottom:20px; padding-left:40px; padding-right:40px;">
