--- a/templates/view_evaluation.html
+++ b/templates/view_evaluation.html
@@ -42,15 +42,33 @@
                 <div class="row justify-content-around">
                     <div class="col-3" style="border-radius:10px; padding:10px;">
                          <div class="row justify-content-around"><span style="background:#ACDBF6; border-radius:30px; text-align:center; width:80px">甜度</span></div>
-                         <div class="row"><span style="text-align:center">{{ sweetness }}</span></div>
+                         <div class="row">
+                             {% if avg_sweetness %}
+                                 <span style="text-align:center">{{ '%.2f'|format(avg_sweetness) }}</span>
+                             {% else %}
+                                 <span style="text-align:center">尚無評價</span>
+                             {% endif %}
+                         </div>
                     </div>
                     <div class="col-3" style="border-radius:10px; padding:10px;">
-                         <div class="row justify-content-around"><span style="background:#ACDBF6; border-radius:30px; text-align:center; width:80px">涼度</span></div>
-                         <div class="row"><span style="text-align:center">{{ cool }}</span></div>
+                        <div class="row justify-content-around"><span style="background:#ACDBF6; border-radius:30px; text-align:center; width:80px">涼度</span></div>
+                        <div class="row">
+                             {% if avg_cool %}
+                                 <span style="text-align:center">{{ '%.2f'|format(avg_cool) }}</span>
+                             {% else %}
+                                 <span style="text-align:center">尚無評價</span>
+                             {% endif %}
+                        </div>
                     </div>
                     <div class="col-3" style="border-radius:10px; padding:10px;">
                         <div class="row justify-content-around"><span style="background:#ACDBF6; border-radius:30px; text-align:center; width:80px">收穫</span></div>
-                        <div class="row"><span style="text-align:center">{{ gain }}</span></div>
+                        <div class="row">
+                             {% if avg_gain %}
+                                 <span style="text-align:center">{{ '%.2f'|format(avg_gain) }}</span>
+                             {% else %}
+                                 <span style="text-align:center">尚無評價</span>
+                             {% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
