--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     {% block head %}
     {% endblock head %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title%}{% endblock title%} - 選課小幫手</title>
 </head>
 <body>
