--- a/templates/add_evaluation.html
+++ b/templates/add_evaluation.html
@@ -56,7 +56,7 @@
             <br>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="gain" id="gain1" value="1">
-                <label class="form-check-label" for="gain1"> 1 非常有收穫 </label>
+                <label class="form-check-label" for="gain1"> 1 非常沒有收穫 </label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="gain" id="gain2" value="2">
